# cryptonews-aggregator

./: .env.example  .gitignore  0xmeta_API_postman.json  README.md  export_openapi.py  openapi.json  pyproject.toml
app/: __init__.py  main.py
app/agents/: __init__.py  categorizer.py  data_merger.py  date_normalizer.py  game_worker.py
app/cache/: __init__.py  redis_client.py
app/controllers/: __init__.py  markets_controller.py
app/core/: __init__.py  config.py  logging.py  startup.py
app/database/: __init__.py  base.py  session.py
app/database/migrations/: 001_initial_schema.sql
app/middleware/: __init__.py  x402.py
app/models/: __init__.py  news.py  payment.py
app/queue/: __init__.py  tasks.py  worker.py
app/routes/: __init__.py  health.py  markets.py
app/services/: __init__.py  cryptonews.py  game_x.py  merger.py  payment.py
app/workers/: __init__.py  cleanup.py
